--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.4",
-    "react-dom": "^19.2.4",
-    "lucide-react": "^0.574.0",
-    "zustand": "^5.0.11",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "lucide-react": "0.460.0",
+    "zustand": "5.0.1",
+    "@supabase/supabase-js": "2.46.1",
     "@capacitor/cli": "^8.1.0",
-    "firebase": "^12.9.0"
+    "electron": "^40.4.1",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
